[gd_scene load_steps=15 format=3 uid="uid://cwlxngldw5eeh"]

[ext_resource type="Script" uid="uid://co3sqkaals1gt" path="res://Prefabs/Enemy/spider.gd" id="1_y1ak0"]
[ext_resource type="Texture2D" uid="uid://bht2g8jkuplyj" path="res://Resources/spider2.png" id="2_361r8"]
[ext_resource type="Texture2D" uid="uid://dgrxv87fnhh1i" path="res://Resources/spider1.png" id="3_wxqcl"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vrckt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_361r8")
}, {
"duration": 1.0,
"texture": ExtResource("3_wxqcl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_gmla7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5ickb"]
resource_name = "damaged"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1vgnw"]
_data = {
&"RESET": SubResource("Animation_gmla7"),
&"damaged": SubResource("Animation_5ickb")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_hakij"]
radius = 1426.18

[sub_resource type="CircleShape2D" id="CircleShape2D_fwpy1"]
radius = 39.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_si5ra"]
bg_color = Color(0, 0, 0, 0.607843)
skew = Vector2(0.5, 0)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xeksu"]
bg_color = Color(1, 0, 0, 1)
skew = Vector2(0.5, 0)
anti_aliasing = false

[sub_resource type="Animation" id="Animation_m4h72"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5tlft"]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i2vps"]
_data = {
&"RESET": SubResource("Animation_m4h72"),
&"spawn": SubResource("Animation_5tlft")
}

[node name="Spider" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 5
script = ExtResource("1_y1ak0")
allow_random_drops = false
max_health = 0.5

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_vrckt")
frame_progress = 0.674023

[node name="DamageAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
&"": SubResource("AnimationLibrary_1vgnw")
}
speed_scale = 0.25

[node name="Detection" type="Area2D" parent="."]
show_behind_parent = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
show_behind_parent = true
shape = SubResource("CircleShape2D_hakij")
debug_color = Color(1, 1, 0, 0.0980392)

[node name="Hitbox" type="Area2D" parent="."]
show_behind_parent = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
show_behind_parent = true
shape = SubResource("CircleShape2D_fwpy1")

[node name="HitTimer" type="Timer" parent="."]

[node name="StunTimer" type="Timer" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 2

[node name="Health" type="RichTextLabel" parent="."]
visible = false
offset_left = -26.0
offset_top = -68.0
offset_right = 29.0
offset_bottom = -44.0
text = "5"
fit_content = true

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = -40.0
theme_override_styles/background = SubResource("StyleBoxFlat_si5ra")
theme_override_styles/fill = SubResource("StyleBoxFlat_xeksu")
max_value = 5.0
value = 5.0
show_percentage = false

[node name="MoveTimer" type="Timer" parent="."]
autostart = true

[node name="SpawnAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_i2vps")
}

[connection signal="body_entered" from="Detection" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
